# vbox-tui

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  Ubuntu24_04(template).vdi  build-binary.sh  pyproject.toml  vbox-tui.py  vbox-tui.spec
src/vbox_tui/: __init__.py  app.py  config_screen.py  create_vm_screen.py  delete_confirm_screen.py  disk_screen.py  export_progress_screen.py  export_screen.py  file_browser.py  force_poweroff_screen.py  settings_screen.py  snapshot_screen.py  vbox.py
