[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbox-tui"
version = "0.2.0"
description = "A Terminal UI for managing VirtualBox VMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
vbox-tui = "vbox_tui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
